test/simple/correct/EnumFromTo7.hs
module EnumFromTo7 where

main :: [Int]
main = list
  where
    list :: [Int]
    list = [60,62..50]
