test/simple/typeerrors/Examples/ExprEnumResult.hs
module ExprEnumResult where

f :: Bool
f = [0..9]
